chore: add paginated endpoint to example. pull per_page default from apia.
