# spec/support/fixtures/openapi.json
@@ -253,6 +253,67 @@
         }
       }
     },
+    "/paginated": {
+      "get": {
+        "operationId": "get:paginated",
+        "summary": "Paginated Endpoint",
+        "description": "Returns a paginated list of strings",
+        "tags": [
+          "Core"
+        ],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "default": 1,
+              "minimum": 1
+            },
+            "description": "The page number to request. If not provided, the first page will be returned."
+          },
+          {
+            "name": "per_page",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "default": 30,
+              "minimum": 1
+            },
+            "description": "The number of items to return per page. If not provided, the default value will be used."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns a paginated list of strings",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "pagination": {
+                      "$ref": "#/components/schemas/PaginationObject"
+                    },
+                    "names": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
+                    }
+                  },
+                  "required": [
+                    "pagination",
+                    "names"
+                  ]
+                }
+              }
+            }
+          },
+          "403": {
+            "$ref": "#/components/responses/APIAuthenticator403Response"
+          }
+        }
+      }
+    },
     "/time/formatting/incredibly/super/duper/long/format": {
       "get": {
         "operationId": "get:t_f_i_s_d_l_f",
@@ -897,6 +958,33 @@
         "properties": {
           "as_integer": {
             "type": "integer"
+          }
+        }
+      },
+      "PaginationObject": {
+        "type": "object",
+        "properties": {
+          "current_page": {
+            "type": "integer",
+            "description": "The current page"
+          },
+          "total_pages": {
+            "type": "integer",
+            "description": "The total number of pages",
+            "nullable": true
+          },
+          "total": {
+            "type": "integer",
+            "description": "The total number of items across all pages",
+            "nullable": true
+          },
+          "per_page": {
+            "type": "integer",
+            "description": "The number of items per page"
+          },
+          "large_set": {
+            "type": "boolean",
+            "description": "Is this a large set and therefore the total number of records cannot be returned?"
           }
         }
       },
